--- a/src/main/resources/templates/layouts/main_layout.html
+++ b/src/main/resources/templates/layouts/main_layout.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title th:text="${title}">Springit - Spring Boot Reddit Clone</title>
+  <title th:text="${title}">Reddit Clone</title>
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" th:href="@{/libs/bootstrap/css/bootstrap.min.css}"/>
   <!-- Custom styles for this template -->
