--- a/src/main/resources/templates/link/submit.html
+++ b/src/main/resources/templates/link/submit.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{layouts/main_layout :: head(title='Springit - Spring Boot Reddit Clone')}">
+<head th:replace="~{layouts/main_layout :: head(title='Reddit Clone')}">
 </head>
 <body>
 
